# A-Star

./: .env  .gitignore  .travis.yml  Node.py  PriorityQueue.py  README.md  a_star.py  config.py  pg_helper.py  pyproject.toml  pytest.ini  split_ways_function.sql  tag_check.py
all_roads/: all_roads.json
dfosm/: __init__.py  astar.py  dfosm.py
dfosm/classes/: AStarManager.py  Node.py  NodeOptions.py  PGHelper.py  PriorityQueue.py  __init__.py
dfosm/utilities/: __init__.py  constants.py  geometry_helper.py  pg_helper.py
dfosm/weighting/: BikeWeighter.py  BikeWeightor.py  CarWeighter.py  CarWeightor.py  HGVWeighter.py  HGVWeightor.py  WalkWeighter.py  WalkWeightor.py  Weighter.py  WeighterFactory.py  Weightor.py  WeightorFactory.py  __init__.py
tests/: .env  config.py  test_a_star.py  test_known_routes.py
